# Boostcamp-AI-Tech-Product-Serving

./: .gitignore
part2/01-voila/: baseline.ipynb  ipywidget-basic.ipynb
part2/02-streamlit/special-mission/: README.md  app.py  requirements.txt
part2/02-streamlit/special-mission/assets/: 0511-upernet_swin_l_full_pl.py
part2/03-cloud/: gcp-bucket.ipynb
part2/04-cicd/: app.py
part3/01-fastapi/practice/: 01_simple_webserver.py  02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  11_event_handler.py  12_api_router.py  13_exception_handling.py  login_form.html  pyproject.toml
part3/01-fastapi/practice_app/: main.py
part3/01-fastapi/special_mission/: __main__.py  frontend.py  main.py  model.py
